# slidekick

./: README.md  pyproject.toml
src/slidekick/: __init__.py  log.py  metadata.py
src/slidekick/examples/: convert_czi2tiff_example.py  full_pipeline.py  read_wsi_example.py  visualization_example.py
src/slidekick/image_processing/: __init__.py
src/slidekick/io/: __init__.py  add_metadata.py  czi.py  metadata.py  tif.py  wsi.py  wsi_importer.py
src/slidekick/metadata/: __init__.py  add_metadata.py  metadata.py
src/slidekick/processing/: __init__.py  add_metadata.py  baseoperator.py  baseoperators.py  metadata.py  stain_normalization.py  stain_separation.py
src/slidekick/processing/lobule_segmentation/: __init__.py  geom_utils.py  get_segments.py  lob_utils.py  lobule_segmentation.py  lobulus_statistics.py  portality.py  process_segments.py  run_skeletize_image.py  segments_to_mask.py
src/slidekick/processing/lobule_statistics/: __init__.py  lob_stat.py
src/slidekick/processing/roi/: __init__.py  roi_detection.py  roi_utils.py
src/slidekick/processing/stain_normalization/: __init__.py  stain_normalization.py  stain_utils.py
src/slidekick/processing/stain_separation/: __init__.py  stain_separation.py
src/slidekick/processing/valis_registration/: __init__.py  valis_registration.py
src/slidekick/visualization/: __init__.py  napari_viewer.py
