[project]
name = "slidekick"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "rich",
    "numpy>=2.2.4",
    "zarr<3",
    "tifffile>=2025.3.30",
    "imagecodecs",
    "lxml",
    "pint",
    "pylibCZIrw",
]
