[project]
name = "slidekick"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas",
    "rich",
    "numpy>=2.2.4",
    "zarr<3",
    "tifffile>=2025.3.30",
    "imagecodecs",
    "lxml",
    "pint",
    "pylibCZIrw",
    "dask",
    "napari",
    "napari-wsi",
    "rasterio",
    "wsidicom",
    "PyQt5",
    "opencv-python",
    "PyQt5-Qt5==5.15.2 ; sys_platform == 'win32'"
]
