[project]
name = "slidekick"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.3.2",
    "rich==14.1.0",
    "numpy==1.26.4",
    "zarr==2.18.7",
    "tifffile==2025.3.*",
    "imagecodecs==2025.8.2",
    "lxml==6.0.1",
    "pint==0.25",
    "pylibczirw==5.0.0",
    "dask==2025.7.0",
    "napari==0.6.4",
    "napari-wsi==0.1.4",
    "rasterio==1.4.3",
    "wsidicom==0.27.1",
    "pyqt5==5.15.11",
    "opencv-python==4.11.0.86",
    "PyQt5-Qt5==5.15.2 ; sys_platform == 'win32'",
    "affine==2.4.0",
    "aicspylibczi==3.3.1",
    "alabaster==1.0.0",
    "annotated-types==0.7.0",
    "app-model==0.4.0",
    "appdirs==1.4.4",
    "asciitree==0.3.3",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "babel==2.17.0",
    "beautifulsoup4==4.13.5",
    "bounded-pool-executor==0.0.3",
    "build==1.3.0",
    "cachey==0.2.1",
    "certifi==2025.8.3",
    "cffi==1.17.1",
    "charset-normalizer==3.4.3",
    "cjdk==0.4.1",
    "click==8.2.1",
    "click-plugins==1.1.1.2",
    "cligj==0.7.2",
    "cloudpickle==3.1.1",
    "cmake==4.1.0",
    "colorama==0.4.6",
    "colour-science==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "deprecated==1.2.18",
    "dicomweb-client==0.59.3",
    "docstring-parser==0.17.0",
    "docutils==0.21.2",
    "einops==0.8.1",
    "et-xmlfile==2.0.0",
    "executing==2.2.0",
    "fastcluster==1.2.6",
    "fasteners==0.20",
    "filelock==3.19.1",
    "flexcache==0.3",
    "flexparser==0.4",
    "fonttools==4.59.2",
    "freetype-py==2.5.1",
    "fsspec==2024.12.0",
    "heapdict==1.0.1",
    "hsluv==5.0.4",
    "idna==3.10",
    "imageio==2.37.0",
    "imagesize==1.4.1",
    "in-n-out==0.2.1",
    "ipykernel==6.30.1",
    "ipython==9.4.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jgo==1.0.6",
    "jinja2==3.1.6",
    "joblib==1.5.2",
    "jpype1==1.6.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kiwisolver==1.4.9",
    "kornia==0.8.1",
    "kornia-rs==0.1.9",
    "lazy-loader==0.4",
    "locket==1.0.0",
    "magicgui==0.10.1",
    "markdown-it-py==4.0.0",
    "markupsafe==2.1.5",
    "marshmallow==3.26.1",
    "matplotlib==3.10.5",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "napari-console==0.1.3",
    "napari-plugin-engine==0.2.0",
    "napari-svg==0.2.1",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "npe2==0.7.9",
    "numcodecs==0.15.1",
    "numpydoc==1.9.0",
    "ome-types==0.6.1",
    "opencv-contrib-python-headless==4.9.0.80",
    "openpyxl==3.1.5",
    "packaging==25.0",
    "parso==0.8.5",
    "partd==1.4.2",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "pooch==1.8.2",
    "pqdm==0.2.0",
    "progressbar2==4.5.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.0.0",
    "psygnal==0.14.1",
    "pure-eval==0.2.3",
    "pyconify==0.2.1",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-compat==0.1.2",
    "pydantic-core==2.33.2",
    "pydantic-extra-types==2.10.5",
    "pydicom==3.0.1",
    "pygments==2.19.2",
    "pyopengl==3.1.10",
    "pyparsing==3.2.3",
    "pyproject-hooks==1.2.0",
    "pyqt5-qt5==5.15.2",
    "pyqt5-sip==12.17.0",
    "python-dateutil==2.9.0.post0",
    "python-utils==3.9.1",
    "pytz==2025.2",
    "pyvips==3.0.0",
    "pywin32==311",
    "pyyaml==6.0.2",
    "pyzmq==27.0.2",
    "qtconsole==5.6.1",
    "qtpy==2.4.3",
    "referencing==0.36.2",
    "requests==2.32.5",
    "retrying==1.4.2",
    "roman-numerals-py==3.1.0",
    "rpds-py==0.27.1",
    "scikit-image==0.25.2",
    "scikit-learn==1.7.1",
    "scipy>=1.6.3,<1.15",
    "scyjava==1.12.1",
    "setuptools==80.9.0",
    "shapely==2.1.1",
    "shellingham==1.5.4",
    "simpleitk==2.5.2",
    "six==1.17.0",
    "snowballstemmer==3.0.1",
    "soupsieve==2.8",
    "sphinx==8.2.3",
    "sphinxcontrib-applehelp==2.0.0",
    "sphinxcontrib-devhelp==2.0.0",
    "sphinxcontrib-htmlhelp==2.1.0",
    "sphinxcontrib-jsmath==1.0.1",
    "sphinxcontrib-qthelp==2.0.0",
    "sphinxcontrib-serializinghtml==2.0.0",
    "stack-data==0.6.3",
    "superqt==0.7.6",
    "sympy==1.14.0",
    "threadpoolctl==3.6.0",
    "tomli-w==1.2.0",
    "toolz==1.0.0",
    "torch==2.8.0",
    "torchvision==0.23.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.16.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "universal-pathlib==0.2.6",
    "urllib3==2.5.0",
    "validators==0.35.0",
    "valis-wsi==1.2.0",
    "vispy==0.15.2",
    "wcwidth==0.2.13",
    "weightedstats==0.4.1",
    "wrapt==1.17.3",
    "xmltodict==0.14.2",
    "xsdata==24.3.1",
    "geojson>=3.2.0",
]
